Improve overdue task card contrast. Issue #33

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,8 @@
  /* --success-color: #388E3C; /* Pigment Green */
   --attention-color: #FFC107; /* Amber */
   /* --danger-color: #F44336;  Vermillion */
-   --danger-color: #D32F2F;
+   --danger-color: #CE2F2F;
+   /* --danger-color: #D32F2F; */
   --background-color: #F5F5F5; /* White Smoke */
   --text-color: #212121;  /* Eerie Black */
   --primary-font: "Inter", serif;
@@ -410,7 +411,7 @@ TASKS CARD
 
 .overdue {
   background-color: var(--danger-color) !important;
-  color: #000  !important; 
+  color: #f0f0f0  !important; 
   border-left: 5px solid #8b0000; 
 }
 
